[package]
name = "rusty-dungeon"
version = "0.1.0"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.3"
legion = { version = "=0.3.1", default-features = false, features = ["codegen"] }
getrandom = { version = "0.2", features = ["js"] }

# Doesn't work with android build
[profile.dev.package.'*']
opt-level = 3
